# training-resources

./: .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  1  AGENTS.md  AUTHORS  AUTHORS.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  Common_googleDoc_MaxBI_EMBL_Course_Jan-Fe_2021.docx  Gemfile  LICENSE.md  Makefile  README.md  Rakefile  TEACHING_TIPS.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled5.ipynb  _config.yml  _config_MAXBI_EMBL_Course_Feb2021.yml  add_new_module.sh  aio2.md  all-modules.md  basic-batch-analysis-course.md  basic-image-analysis-course.md  basic-image-inspection-course.md  batch-analysis-essentials-crash-course.md  cells.parquet  cloud-based-analysis-course.md  create_figures.sh  create_modules_pdf.sh  example_images.md  image-data-formats-course-modules.md  image-data-formats-course.md  index.md  (+9 more)
_courses/: advanced-image-analysis-course.md  basic-batch-analysis-course.md  basic-image-analysis-course.md  basic-image-inspection-course.md  batch-analysis-essentials-crash-course.md  cloud-based-analysis-course.md  image-data-formats-course.md  image_formation_and_artefacts.md  imagej-macro-course.md
_extras/: about.md  figures.md  guide.md
_includes/: aio-script.md  aio2-script.md  all-modules.md  all_keypoints.html  course_modules.html  footer.html  head.html  header.html  image_data_formats_course_modules.md  links.md  (+8 more)
functions/python_modules/OpenIJTIFF/: pyproject.toml
functions/python_modules/OpenIJTIFF/OpenIJTIFF/: __init__.py
functions/python_modules/OpenIJTIFF/conda-recipe/: meta.yaml
(+1415 files in other folders)
