[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenIJTIFF"
description = "NEUBIAS image analysis training utilities"
version = "2025.5.0"
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "requests",
    "tifffile",
]

[project.urls]
"Homepage" = "https://github.com/NEUBIAS/training-resources"
